# networkmanagerv2

./: .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  build.bat  build_and_publish.ps1  build_log.txt  bump_version.py  export_to_usb.bat  export_to_usb_V2.bat  fix_port_ids.py  migrate_switch_ports.py  migrate_v1_to_v2.py  publish.ps1  pyproject.toml  read_version.py  requirements.txt  setup.py
app/: __init__.py  i18n_vlan_patch.py  main.py  report_generator_vlan_patch.py  version.py
app/config/: github_config.example.py
app/gui/: __init__.py  action_review_window.py  bug_report_dialog.py  changelog_viewer_dialog.py  endpoint_overview_widget.py  floorplan_test_window.py  floorplan_view.py  github_cases_dialog.py  help_window.py  main_window.py  outlet_locator_view.py  rack_view.py  search_window.py  settings_window.py  unused_outlet_overview_widget.py  vlan_manager_window.py  vlan_report_view.py  wall_outlet_view.py  wire_detail_view.py
config/: settings.json
css/: detail.qss  main.qss
data/: .gitkeep
docs/: changelog.md
features/: feature-0186d6af.md  feature-24240440.md  feature-2c350c64.md  feature-2da588cc.md  feature-438d7517.md  feature-46d7e9ce.md  feature-485d5a74.md  feature-6221bf2d.md  feature-e3dc38e6.md
i18n/: README.md  __init__.py  translator.py
installer/: networkmap_setup.iss
md/: help.md
models/: __init__.py
scripts/: README.md  bump_version.py  generate_requirements.py  update_toml.py  validate_project.py
tests/: __init__.py  test_networkmap.py  to_do.md
utils/: __init__.py
(+57 files in other folders)
