# pyproject.toml
# Beschrijving: Project configuratie (PEP 621)
# Applicatie: networkmanager
# Versie: 1.0.0
# Auteur: Barremans

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "networkmanager"
version = "1.0.0"
description = "Een Python applicatie"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Barremans"}
]
keywords = ["application", "python", "i18n"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/barremans/networkmanager"
Repository = "https://github.com/barremans/networkmanager"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "helpers*", "utils*", "i18n*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
